Issue 35 - Implemented a batch feature that allows configuring multiple container images at once. This fixes #35.