@@ -1,10 +1,10 @@
 package nl.lexemmens.podman;
 
+import nl.lexemmens.podman.config.image.single.SingleImageConfiguration;
 import nl.lexemmens.podman.enumeration.TlsVerify;
-import nl.lexemmens.podman.image.ImageConfiguration;
-import nl.lexemmens.podman.image.PodmanConfiguration;
-import nl.lexemmens.podman.image.TestImageConfigurationBuilder;
-import nl.lexemmens.podman.image.TestPodmanConfigurationBuilder;
+import nl.lexemmens.podman.config.podman.PodmanConfiguration;
+import nl.lexemmens.podman.config.image.single.TestSingleImageConfigurationBuilder;
+import nl.lexemmens.podman.config.podman.TestPodmanConfigurationBuilder;
 import org.apache.maven.plugin.MojoExecutionException;
 import org.apache.maven.plugin.logging.Log;
 import org.apache.maven.project.MavenProject;
@@ -25,6 +25,7 @@ import java.io.IOException;
 import java.net.URISyntaxException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.Collections;
 import java.util.List;
 
 import static org.mockito.ArgumentMatchers.isA;
@@ -39,7 +40,7 @@ public class SaveMojoTest extends AbstractMojoTest {
 
     @Test
     public void testSkipAllActions() throws MojoExecutionException {
-        ImageConfiguration image = new TestImageConfigurationBuilder("sample")
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder("sample")
                 .setUseMavenProjectVersion(false)
                 .setContainerfileDir(DEFAULT_CONTAINERFILE_DIR)
                 .build();
@@ -52,7 +53,7 @@ public class SaveMojoTest extends AbstractMojoTest {
 
     @Test
     public void testSkipSave() throws MojoExecutionException {
-        ImageConfiguration image = new TestImageConfigurationBuilder("sample")
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder("sample")
                 .setUseMavenProjectVersion(false)
                 .setContainerfileDir(DEFAULT_CONTAINERFILE_DIR)
                 .build();
@@ -68,11 +69,11 @@ public class SaveMojoTest extends AbstractMojoTest {
 
     @Test
     public void testSaveNoTags() {
-        ImageConfiguration image = new TestImageConfigurationBuilder("sample")
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder("sample")
                 .setUseMavenProjectVersion(false)
                 .setContainerfileDir(DEFAULT_CONTAINERFILE_DIR)
                 .build();
-        configureMojo(image,false, false, null, true);
+        configureMojo(image, false, false, null, true);
 
         when(mavenProject.getBuild()).thenReturn(build);
         when(build.getDirectory()).thenReturn("target/podman-test");
@@ -90,7 +91,7 @@ public class SaveMojoTest extends AbstractMojoTest {
         Path targetLocation = currentDir.resolve(containerFileDir);
         String targetLocationAsString = targetLocation.normalize().toFile().getAbsolutePath();
 
-        ImageConfiguration image = new TestImageConfigurationBuilder("sample")
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder("sample")
                 .setContainerfileDir(targetLocationAsString)
                 .setTags(new String[]{"1.0.0"})
                 .setCreateLatestTag(false)
@@ -107,11 +108,11 @@ public class SaveMojoTest extends AbstractMojoTest {
 
     @Test
     public void testSaveWithMavenProjectVersion() throws MojoExecutionException {
-        ImageConfiguration image = new TestImageConfigurationBuilder("sample")
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder("sample")
                 .setUseMavenProjectVersion(true)
                 .setContainerfileDir(DEFAULT_CONTAINERFILE_DIR)
                 .build();
-        configureMojo(image,false, false, "registry.example.com", true);
+        configureMojo(image, false, false, "registry.example.com", true);
 
         when(mavenProject.getBuild()).thenReturn(build);
         when(build.getDirectory()).thenReturn("target/podman-test");
@@ -128,7 +129,7 @@ public class SaveMojoTest extends AbstractMojoTest {
 
     @Test
     public void testSaveImageFromLocalRegistry() throws MojoExecutionException {
-        ImageConfiguration image = new TestImageConfigurationBuilder("sample")
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder("sample")
                 .setUseMavenProjectVersion(true)
                 .setContainerfileDir(DEFAULT_CONTAINERFILE_DIR)
                 .build();
@@ -151,7 +152,7 @@ public class SaveMojoTest extends AbstractMojoTest {
     public void testMultiStageSaveOnlyFinalImage() throws MojoExecutionException {
         Path target = Paths.get(".", "target", "podman");
 
-        ImageConfiguration image = new TestImageConfigurationBuilder("sample")
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder("sample")
                 .setContainerfileDir("src/test/resources/multistagecontainerfile")
                 .setTags(new String[]{"1.0.0"})
                 .setCreateLatestTag(false)
@@ -177,7 +178,7 @@ public class SaveMojoTest extends AbstractMojoTest {
     public void testMultiStageSaveWithCustomTagPerStage() throws MojoExecutionException, IOException, URISyntaxException {
         Path target = Paths.get(".", "target", "podman");
 
-        ImageConfiguration image = new TestImageConfigurationBuilder("sample")
+        SingleImageConfiguration image = new TestSingleImageConfigurationBuilder("sample")
                 .setContainerfileDir("src/test/resources/multistagecontainerfile")
                 .setTags(new String[]{"0.2.1"})
                 .setCreateLatestTag(false)
@@ -204,8 +205,8 @@ public class SaveMojoTest extends AbstractMojoTest {
         verify(log, times(1)).info(Mockito.eq("Container images exported successfully."));
     }
 
-    private void configureMojo(ImageConfiguration image, boolean skipAll, boolean skipSave, String pushRegistry, boolean failOnMissingContainerfile) {
-        List<ImageConfiguration> images = List.of(image);
+    private void configureMojo(SingleImageConfiguration image, boolean skipAll, boolean skipSave, String pushRegistry, boolean failOnMissingContainerfile) {
+        List<SingleImageConfiguration> images = Collections.singletonList(image);
 
         saveMojo.podman = new TestPodmanConfigurationBuilder().setTlsVerify(TlsVerify.NOT_SPECIFIED).build();
         saveMojo.skip = skipAll;
